--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
   "dependencies": {
     "@types/color": "^3.0.3",
     "@types/mongoose": "^5.11.97",
+    "@types/pino-pretty": "^4.7.5",
     "@types/validator": "^13.7.6",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.5",
     "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "pino": "^8.6.1",
+    "pino-pretty": "^9.1.1",
     "typescript": "^4.8.2"
   }
 }
